@startuml Architecture

class MixFile

package bank {
  class Application
  interface Child

  package bank.accounts {
    class AccountsService as "Service"

    package bank.accounts.models as "models" {
      class Account
      class AccountId
      class Money
      class Currency
    }

    package infrastructure {
      class InMemoryAccountRepository
    }
  }
  package bank.clients {
    class ClientsService as "Service"

    package bank.clients.models as "models" {
      class Client
      class Email
      class ClientId
      class Name
    }

    package infrastructure {
      class InMemoryAccountRepository
    }
  }
}

package bank.web {
  class Endpoint
  class Router
  package bank.web.controllers as "controllers" {
    class BankController
  }
}

MixFile -up-> Application
Application o-up-> Child : start_link
Endpoint --|> Child
InMemoryAccountRepository --|> Child


Endpoint --> Router
Router --> BankController
BankController --> AccountsService
BankController --> ClientsService


AccountsService --> InMemoryAccountRepository
InMemoryAccountRepository --> Account
AccountsService --> Account
Account *--> AccountId
Account *--> Money
Money *--> Currency

ClientsService --> Client
Client *--> ClientId
Client *--> Name
Client *--> Email



@enduml